# TikzConvertor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pyrefly.yml
examples/: bert_gpt_attention.tex
src/tikzconvertor/: __init__.py  cli.py  svg_utils.py  tikz2svg.py
